# trace-gen-ai

./: .env  README.md  pyproject.toml  trace_gen_ai_agent.ipynb
resources/: Logs.db  incidents.txt  infra_info.txt
