[project]
name = "trace-gen-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain-tavily>=0.2.13",
    "tavily-python>=0.7.13",
    "tavily>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-cli>=0.4.9",
    "langgraph-api>=0.5.37",
    "langsmith>=0.4.43",
    "langchain-core>=1.1.3",
    "jupyterlab>=4.5.1",
    "langchain-community>=0.4.1",
]
